--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -1,7 +1,7 @@
 <view class="page">
 
   <view class="page__bd">
-    <view class="weui-cells weui-cells_after-title">
+    <!-- <view class="weui-cells weui-cells_after-title">
       <view class="weui-cell">
         <view class="weui-cell__hd" style="position: relative;margin-right: 10px;">
           <image src="{{userInfo.avatarUrl}}" style="width: 50px; height: 50px; display: block" />
@@ -13,7 +13,14 @@
           <view style="font-size: 13px;color: #888888;">欢迎您！</view>
         </view>
       </view>
+    </view> -->
+
+     <view class="profile-info" bindtap="goLogin">
+    <image class="avatar" src="{{userInfo.avatarUrl}}"></image>
+    <view class="info">
+      <text class="name">{{userInfo.nickName}}</text>
     </view>
+  </view>
 
     <view class="weui-cells__title" hidden="true">我的</view>
     
